crates/parser/tests/snapshots/test_parser__parse_assignment.snap
---
source: crates/parser/tests/test_parser.rs
expression: ast
---
- - Expression:
      - Assignment:
          name:
            - Ident: a
            - start: 0
              end: 1
          op: "="
          value:
            - Literal:
                Int: 10
            - start: 4
              end: 6
      - start: 0
        end: 6
  - start: 0
    end: 6

