crates/parser/tests/snapshots/test_parser__parse_block.snap
---
source: crates/parser/tests/test_parser.rs
expression: ast
---
- - Expression:
      - Block:
          - - Expression:
                - Call:
                    callee:
                      - Ident: println
                      - start: 8
                        end: 15
                    args:
                      - - Literal:
                            Int: 10
                        - start: 16
                          end: 18
                - start: 8
                  end: 19
            - start: 8
              end: 19
      - start: 1
        end: 23
  - start: 1
    end: 23

