crates/parser/tests/snapshots/test_parser__parse_return.snap
---
source: crates/parser/tests/test_parser.rs
expression: ast
---
- - Return:
      - Literal:
          Int: 10
      - start: 7
        end: 9
  - start: 0
    end: 9

