crates/parser/tests/snapshots/test_parser__parse_unary-2.snap
---
source: crates/parser/tests/test_parser.rs
expression: ast
---
- - Expression:
      - Unary:
          op: "-"
          rhs:
            - Ident: bar
            - start: 1
              end: 4
      - start: 0
        end: 4
  - start: 0
    end: 4

