crates/parser/tests/snapshots/test_parser__parse_unary.snap
---
source: crates/parser/tests/test_parser.rs
expression: ast
---
- - Expression:
      - Unary:
          op: "!"
          rhs:
            - Ident: foo
            - start: 1
              end: 4
      - start: 0
        end: 4
  - start: 0
    end: 4

